apps/arcs/zeta/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-zeta
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
    sage.arc: "true"
    arc.name: "zeta"
