apps/arcs/zeta/base/zeta-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zeta-egress
  namespace: arc-zeta
spec:
  endpointSelector:
    matchLabels:
      app: observer-api
  egress:
    # DNS to kube-dns
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Chi connection (declared but unused - future path)
    - toServices:
        - k8sService:
            namespace: arc-chi
            serviceName: chi-bus
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
